--- a/lazy.css
+++ b/lazy.css
@@ -1,3 +1,8 @@
+body{
+  margin: 0;
+  padding: 0;
+}
+
 .img {
   opacity: 0;
   filter: blur(12px);
@@ -15,6 +20,11 @@
   gap: 20px;
   padding: 20px;
   justify-items: center;
-  
+
+}
+img{
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
 
 }
